<resources>
    <string name="app_name">App-Embedded</string>
    <string name="home_nav_button">Home</string>
    <string name="tabellone_nav_button">Tabellone</string>
    <string name="stato_treno_nav_button">Stato treno</string>
    <string name="planner_nav_button">Planner</string>
    <string name="home_fab_content_desc">Cerca treno</string>
    <string name="planner_fab_content_desc">Aggiungi planner</string>
    <string name="app_bar_settings">Settings</string>
    <string name="teabellone_hint">Ricerca stazione</string>
    <string name="label1">Stazione partenza</string>
    <string name="label2">Stazione arrivo</string>
    <string name="train_number">Numero treno:</string>
    <string name="departure">Partenza</string>
    <string name="arrival">Arrivo</string>
    <string name="label5">Data e ora</string>
    <string name="date">Data:</string>
    <string name="time">Orario:</string>
    <string name="results_for">Risultati per:</string>
    <string name="state">Stato Treno:</string>
    <string name="planner_name">Nome planner</string>
    <string name="planner_name_">Nome planner:</string>
    <string name="add_train">Aggiungi viaggio</string>
    <string name="place">Luogo:</string>
    <string name="binario_nr">Binario:</string>
    <string name="tab_arrivi">ARRIVI</string>
    <string name="tab_partenze">PARTENZE</string>
    <string name="tab_lunedi">LUNEDI</string>
    <string name="tab_martedi">MARTEDI</string>
    <string name="tab_mercoledi">MERCOLEDI</string>
    <string name="tab_giovedi">GIOVEDI</string>
    <string name="tab_venerdi">VENERDI</string>
    <string name="tab_sabato">SABATO</string>
    <string name="tab_domenica">DOMENICA</string>
    <string name="button_cerca">Cerca</string>
    <string name="value_stub">--</string>
    <string name="train_route"> %1$s - %2$s</string>
    <string name="real_arrival">Arrivo effettivo:</string>
    <string name="real_departure">Partenza effettiva:</string>
    <string name="scheduled_arrival">Arrivo programmato:</string>
    <string name="scheduled_departure">Partenza programmata:</string>
    <string name="expected_departure">Partenza prevista:</string>
    <string name="expected_arrival">Arrivo previsto:</string>
    <string name="preference_file_key">it.unipd.dei.esp2122.app_embedded.PREFERENCE_FILE_KEY</string>
    <string name="app_bar_switch">Switch</string>
    <string name="planner_treni_seguiti">Treni seguiti:</string>
    <string name="delete">Elimina</string>
    <string name="no_planner">Nessun planner presente</string>
    <string name="no_trips">Nessun viaggio presente</string>
    <string name="not_available">Non disponibile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="route">Tratta:</string>
    <string name="last_detection">Ultimo rilevamento alle:</string>
    <string name="close">Chiudi</string>
    <string name="route_details">Dettagli viaggio:</string>
    <string name="trak">Binario:</string>
    <string name="trains_of_the_day">Treni del giorno</string>
    <string name="home_departure">Partenza: %s</string>
    <string name="home_arrival">Arrivo: %s</string>
    <string name="cancel">Annulla</string>
    <string name="new_planner">Nuovo planner:</string>
    <string name="train_details">Dettagli treno</string>
    <string name="two_points">:</string>
    <string name="no_train">Nessun treno per oggi</string>
    <string name="image_description">Immagine di sfondo con treno e orologio</string>
</resources>