<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context="it.unipd.dei.esp2022.app_embedded.ui.Tabellone2Fragment"
    android:orientation="vertical"
    android:gravity="top">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/sfondo1"
        android:text="@string/results_for"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:padding="7dp"
        style="@style/TextAppearance.Material3.TitleMedium"/>

    <TextView
        android:id="@+id/station"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="7dp"
        android:text="Stazione"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:background="@drawable/sfondo1"/>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabIndicatorFullWidth="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_arrivi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_arrivi"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_partenze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_partenze"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"/>

</LinearLayout>
