<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/popup_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_title"
        android:padding="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/route_details"
            app:drawableStartCompat="@drawable/stato_treno_icon"
            android:drawablePadding="2dp"
            app:drawableTint="?attr/colorOnPrimaryContainer"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="?attr/colorOnPrimaryContainer" />

        <TextView
            android:id="@+id/train_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/value_stub"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:background="@drawable/popup_details"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:padding="5dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/route"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:textColor="?attr/colorOnBackground"
            android:padding="5dp"
            android:gravity="center"/>


        <TextView
            android:id="@+id/train_route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/value_stub"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:background="@drawable/popup_details"
            android:textColor="?attr/colorOnSecondaryContainer"
            android:padding="5dp"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/stations_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="15dp"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/add_button"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="5dp"
            android:text="@string/add_train"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/exit_button"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            android:text="@string/close"
            android:textAlignment="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>