<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/popup_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:scaleType="fitCenter"
        android:background="?attr/colorPrimaryContainer"
        android:contentDescription="@string/image_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:srcCompat="@drawable/home_wallpaper"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/home_fab"
        app:fabSize="auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/home_fab_content_desc"
        android:text="@string/home_fab_content_desc"
        app:icon="@drawable/search_icon"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />


    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent=".75"
        app:layout_constraintHeight_percent=".5"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.Material3.CardView.Elevated">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fancy_list_background">

                <TextView
                    android:id="@+id/home_headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/divider"
                    android:text="@string/trains_of_the_day"
                    android:textAppearance="@style/Text.FancyListHeadline">
                </TextView>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="15dp"
                    app:layout_constraintTop_toBottomOf="@id/home_headline"
                    android:background="?attr/colorOnSecondaryContainer" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@id/divider"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/train_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/train_number"
                        android:textAppearance="@style/Text.FancyListSupportText"
                        android:textSize="11sp"/>

                    <TextView
                        android:id="@+id/planner_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/planner_name_"
                        android:textAppearance="@style/Text.FancyListSupportText"
                        android:textSize="11sp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="5dp">

                <ProgressBar
                    android:id="@+id/loading_spinner"
                    style="?android:progressBarStyleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/empty_list_popup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible">

                    <TextView
                        android:id="@+id/no_train_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/add_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/no_train"
                        app:drawableTopCompat="@drawable/stato_treno_icon" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_button"
                        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/no_train_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:padding="5dp"
                        android:text="@string/add_train"
                        android:textAlignment="center"
                        android:textColor="?attr/colorOnSecondaryContainer"
                        android:backgroundTint="?attr/colorSecondaryContainer"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>