<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/train_label"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/station_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp">

    </TextView>

    <TextView
        android:id="@+id/scheduled_arrival"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_arrival"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/station_name"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/arrival_text"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduled_arrival"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/scheduled_departure"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scheduled_departure"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrival_text"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/departure_text"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduled_departure"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/scheduled_arrival_value"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/station_name"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/arrival_value"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduled_arrival"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/scheduled_departure_value"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrival_text"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/departure_value"
        style="@style/TextAppearance.Material3.LabelSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value_stub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduled_departure"
        android:padding="5dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>

